--- a/src/index.css
+++ b/src/index.css
@@ -55,4 +55,12 @@
     height:100vh;
     /* place-items:center */
   }
+
+  .errmsg {
+    background-color: lightpink;
+    color: firebrick;
+    font-weight: bold;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
 }
